# MINAJ

./: LICENSE  README.md  experimentation.py  pyproject.toml
minaj/: cli.py  main.py  utils.py
